tests/ui/attr_path.stderr
error: fixcol-derive error: Could not read config from path style attribute.

       Expected parameters like #[fixcol(width = 4)]
 --> tests/ui/attr_path.rs:5:7
  |
5 |     #[fixcol]
  |       ^^^^^^
